--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 
 /MasterClass/.vs/MasterClass
 /MasterClass/MasterClass
+/MasterClass/RecipeBook/obj/Debug/net8.0/RecipeBook.AssemblyInfo.cs
+/MasterClass/RecipeBook/obj/Debug/net8.0/RecipeBook.AssemblyInfoInputs.cache
